# kratos

./: CMakeLists.txt  Readme.md  licence.txt
src/include/: EvolutionaryAlgorithm.hpp
src/include/core/: NonDominatedPopulation.hpp  ProcessNode.hpp  Variable.cpp  Variable.hpp
src/include/variable/: RealVariable.hpp
src/source/: EvolutionaryAlgorithm.cpp  main.cpp
src/source/core/: NonDominatedPopulation.cpp  ProcessNode.cpp  Variable.cpp
src/source/variable/: RealVariable.cpp
tests/: CMakeCache.txt  CMakeLists.txt  Kratos_Tests  Makefile  cmake_install.cmake
tests/src/: kratosTESTS.cpp
